Fix Java 11 compatibility in HiveIntegrationTest
Replace Stream.toList() (Java 16+) with collect(Collectors.toList())
to maintain compatibility with Java 11 build target.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>